--- a/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Host/package.json
+++ b/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Host/package.json
@@ -1,8 +1,8 @@
 {
   "version": "1.0.0",
-  "name": "my-app",
+  "name": "my-app-identityserver",
   "private": true,
   "dependencies": {
-    "@abp/aspnetcore.mvc.ui.theme.leptonxlite": "~1.0.0-rc.7"
+    "@abp/aspnetcore.mvc.ui.theme.basic": "^6.0.0"
   }
 }
