--- a/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Blazor.Server.Host/appsettings.json
+++ b/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Blazor.Server.Host/appsettings.json
@@ -10,6 +10,7 @@
   "AuthServer": {
     "Authority": "https://localhost:44300/",
     "RequireHttpsMetadata": "false",
-    "ClientId": "MyProjectName_Blazor_Server"
+    "ClientId": "MyProjectName_Blazor_Server",
+    "ClientSecret": "1q2w3e*"
   }
 }
