--- a/src/Tc.Abp.AspNetCore.Components.Server/Tc.Abp.AspNetCore.Components.Server.csproj
+++ b/src/Tc.Abp.AspNetCore.Components.Server/Tc.Abp.AspNetCore.Components.Server.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 	<Import Project="..\..\common.props" />
 	<PropertyGroup>
-		<Nullable>false</Nullable>
+		<Nullable>disable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 	<ItemGroup>
