--- a/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Blazor/MyCompanyName.MyProjectName.Blazor.csproj
+++ b/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Blazor/MyCompanyName.MyProjectName.Blazor.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.0.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="$(MicrosoftPackageVersion)" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="$(MicrosoftPackageVersion)" />
+		<PackageReference Include="MudBlazor" Version="6.1.4" />
 		<PackageReference Include="OpenIddict.Abstractions" Version="3.1.1" />
 		<PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="$(AbpVersion)" />
 	</ItemGroup>
@@ -23,7 +24,7 @@
 		<PackageReference Include="Volo.Abp.Http.Client.IdentityModel.WebAssembly" Version="$(AbpVersion)" />
 		<PackageReference Include="Volo.Abp.AspNetCore.Components.Web.Theming" Version="$(AbpVersion)" />
 		<!-- </TEMPLATE-REMOVE> -->
-		<PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.LeptonXLiteTheme" Version="1.0.0" />
+		<PackageReference Include="Volo.Abp.AspNetCore.Components.WebAssembly.LeptonXLiteTheme" Version="1.0.2" />
 	</ItemGroup>
 
 
